[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "swissparlpy"
authors = [{name = "Stefan Oderbolz", email = "odi@metaodi.ch"}]
readme = "README.md"
requires-python = ">=3.8"
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version"]
description = "Client for Swiss parliament API"
dependencies = [
    "requests",
    "pyodata>=1.10.0",
]

[project.optional-dependencies]
test = [
    "flake8",
    "mock",
    "responses",
    "pytest",
    "pytest-cov",
    "black[jupyter]>=24.0.0,<25.0.0",
]
dev = [
    "jupyter",
    "pandas",
    "black[jupyter]>=24.0.0,<25.0.0",
    "pre-commit",
]
visualization = [
    "matplotlib>=3.0.0",
    "pandas",
]


[project.urls]
Home = "https://github.com/metaodi/swissparlpy"

[tool.hatch.version]
path = "swissparlpy/__init__.py"
