[project]
name = "swissparlpy"
authors = [{name = "Stefan Oderbolz", email = "odi@metaodi.ch"}]
readme = "README.md"
requires-python = ">=3.9"
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version"]
description = "Client for Swiss parliament API"
dependencies = [
    "requests",
    "pyodata>=1.10.0",
]

[project.optional-dependencies]
test = [
    "flake8",
    "mock",
    "responses",
    "pytest",
    "pytest-cov",
    "black[jupyter]>=24.0.0,<25.0.0",
]
dev = [
    "jupyter",
    "black[jupyter]>=24.0.0,<25.0.0",
    "pre-commit",
    "mypy",
    "types-requests",
    "pandas-stubs",
]
visualization = [
    "matplotlib>=3.0.0",
    "pandas",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Home = "https://github.com/metaodi/swissparlpy"

[tool.hatch.version]
path = "swissparlpy/__init__.py"

[tool.flake8]
max-complexity = 10
exclude = ".git,__pycache__,pyenv,.pytest_cache"
# set to true to check all ignored errors
disable_noqa = false

# adaptions for black
max-line-length = 88
extend-ignore = "E203,W503"

[tool.pytest.ini_options]
addopts = "--cov=swissparlpy"

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true
warn_unused_ignores = true
warn_return_any = true
show_error_codes = true
pretty = true